heroku app commit

--- a/public/index.html
+++ b/public/index.html
@@ -52,13 +52,13 @@
                 WEBSITE
             </div>
             <div class="col-xs-12 cv-text cv-my-info">
-                <a href="creights.herokuapp.com">creights.herokuapp.com</a>
+                <a href="http://creights.herokuapp.com">creights.herokuapp.com</a>
             </div>
             <div class="col-xs-12 cv-mini-title">
                 LINKEDIN
             </div>
             <div class="col-xs-12 cv-text cv-my-info">
-                bit.ly/1MDj8zC
+                <a href="http://bit.ly/1MDj8zC">bit.ly/1MDj8zC</a>
             </div>
             <div class="col-xs-12 cv-mini-title">
                 EMAIL
