-adjusted the url for the link to this website

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                 WEBSITE
             </div>
             <div class="col-xs-12 cv-text cv-my-info">
-                <a href="http://creights.herokuapp.com">creights.herokuapp.com</a>
+                <a href="http://creights.herokuapp.com">creights-cv.herokuapp.com</a>
             </div>
             <div class="col-xs-12 cv-mini-title">
                 LINKEDIN
