--- a/public/index.html
+++ b/public/index.html
@@ -568,13 +568,27 @@
     <div class="col-xs-12">
 
         <div class="col-xs-12 col-sm-3 cv-mini-title">
-            SENIOR FULLSTACK MOBILE/WEB DEVELOPER<br>
+            TECHNICAL LEAD<br>
             <span class="cv-sub-mini-title">IBM Interactive Experience (iX)<br>
-            Sept '10 - Current</span>
+            May '16 - Current</span>
         </div>
 
         <div class="col-xs-12 col-sm-9 cv-text">
             I am responsible for leading the development of innovative applications for our clients to bring their ideas to life within the mobile/web space. I have worked with some of the biggest clients and brands in the market, across several sectors including HSBC, American Express, Nationwide, Vodafone, O2, Post Office & DWP. The majority of the work that I am involved in is the development of Javascript Fullstack applications making use of HTML 5, JavaScript, AngularJS, React, CSS 3, LESS, SASS, Node.js, Express and MongoDB. Alongside this, I also have experience of natively developing apps for Android and iPhone, adding to my knowledge of Java, Android & Swift.
+        </div>
+
+    </div>
+
+    <div class="col-xs-12 main-section">
+
+        <div class="col-xs-12 col-sm-3 cv-mini-title">
+            SENIOR FULLSTACK WEB/MOBILE DEVELOPER<br>
+            <span class="cv-sub-mini-title">IBM Interactive Experience (iX)<br>
+            Sept '10 - May '16</span>
+        </div>
+
+        <div class="col-xs-12 col-sm-9 cv-text">
+            As above but in more of a team member capacity, as the lead developer, as part of a scrum team.
         </div>
 
     </div>
